--- a/SS.Integration.Common.ConfigSerializer/SS.Integration.Common.ConfigSerializer.csproj
+++ b/SS.Integration.Common.ConfigSerializer/SS.Integration.Common.ConfigSerializer.csproj
@@ -36,7 +36,7 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\SS.Integration.Mapping.ProxyService.Client.1.1.20.0\lib\net45\bin\Release\log4net.dll</HintPath>
     </Reference>
-    <Reference Include="Newtonsoft.Json, Version=4.0.8.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+    <Reference Include="Newtonsoft.Json, Version=5.0.6.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\SS.Integration.Mapping.ProxyService.Client.1.1.20.0\lib\net45\bin\Release\Newtonsoft.Json.dll</HintPath>
     </Reference>
@@ -66,7 +66,9 @@
     <Compile Include="ProxyServiceSettings.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="packages.config" />
+    <None Include="packages.config">
+      <SubType>Designer</SubType>
+    </None>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\nuget.targets" />
