Added conf variable

--- a/SS.Integration.Adapter.WindowsService/App.config
+++ b/SS.Integration.Adapter.WindowsService/App.config
@@ -19,6 +19,7 @@
     <add key="eventStateFilePath"         value="eventState.json" />
     <add key="marketFiltersDirectory"     value="FixturesStateFiles\MarketFilterState" />
     <add key="cacheExpiryInMins"          value="15" />
+		<add key="maxPeriodWithoutMessage"    value="240000" />
   </appSettings>
   <mappingUpdater configSource="mappingUpdater.config" />
   <startup>
