--- a/SS.Integration.Adapter.WindowsService/App.config
+++ b/SS.Integration.Adapter.WindowsService/App.config
@@ -17,8 +17,9 @@
     <add key="eventStateFilePath" value="eventState.json" />
     <add key="marketFiltersDirectory" value="FixturesStateFiles\MarketFilterState" />
     <add key="cacheExpiryInMins" value="15" />
-		<add key="statsEnabled" value="#{AdapterUseStats}" />
-		<add key="deltaRuleEnabled" value="#{AdapterUseDeltaRule}" />
+    <add key="statsEnabled" value="#{AdapterUseStats}" />
+    <add key="deltaRuleEnabled" value="#{AdapterUseDeltaRule}" />
+    <add key="sports" value="" /> <!-- i.e. "Baseball,Football"-->
   </appSettings>
  
   <startup>
