1.Added ability to specify which sports to load from SS 2.Added ability to pass echo status back to plugin

--- a/SS.Integration.Adapter.Diagnostics/SS.Integration.Adapter.Diagnostics.csproj
+++ b/SS.Integration.Adapter.Diagnostics/SS.Integration.Adapter.Diagnostics.csproj
@@ -43,9 +43,9 @@
       <HintPath>..\packages\RestSharp.105.2.3\lib\net45\RestSharp.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="SportingSolutions.Udapi.Sdk, Version=1.1.152.0, Culture=neutral, processorArchitecture=MSIL">
+    <Reference Include="SportingSolutions.Udapi.Sdk, Version=0.1.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\SportingSolutions.Udapi.Sdk.1.1.152.0\lib\net40\SportingSolutions.Udapi.Sdk.dll</HintPath>
-      <Private>True</Private>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
