--- a/SS.Integration.Adapter.Plugin.Logger/SS.Integration.Adapter.Plugin.Logger.csproj
+++ b/SS.Integration.Adapter.Plugin.Logger/SS.Integration.Adapter.Plugin.Logger.csproj
@@ -54,12 +54,18 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       <SubType>Designer</SubType>
     </None>
-    <None Include="packages.config" />
+    <None Include="packages.config">
+      <SubType>Designer</SubType>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\SS.Integration.Adapter.Model\SS.Integration.Adapter.Model.csproj">
       <Project>{29461692-6de2-47fa-acc4-ecaae9462ae3}</Project>
       <Name>SS.Integration.Adapter.Model</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\SS.Integration.Adapter\SS.Integration.Adapter.csproj">
+      <Project>{1ad0b149-3a7b-4725-abde-9455d953f036}</Project>
+      <Name>SS.Integration.Adapter</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
