--- a/SS.Integration.Adapter/SS.Integration.Adapter.csproj
+++ b/SS.Integration.Adapter/SS.Integration.Adapter.csproj
@@ -61,13 +61,12 @@
     <Reference Include="RabbitMQ.Client">
       <HintPath>..\packages\RabbitMQ.Client.3.3.5\lib\net30\RabbitMQ.Client.dll</HintPath>
     </Reference>
-    <Reference Include="RestSharp, Version=104.5.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\RestSharp.104.5.0\lib\net4\RestSharp.dll</HintPath>
-      <Private>True</Private>
+    <Reference Include="RestSharp">
+      <HintPath>..\packages\RestSharp.105.2.3\lib\net45\RestSharp.dll</HintPath>
     </Reference>
-    <Reference Include="SportingSolutions.Udapi.Sdk, Version=1.1.152.0, Culture=neutral, processorArchitecture=MSIL">
+    <Reference Include="SportingSolutions.Udapi.Sdk, Version=0.1.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\SportingSolutions.Udapi.Sdk.1.1.152.0\lib\net40\SportingSolutions.Udapi.Sdk.dll</HintPath>
-      <Private>True</Private>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Configuration" />
