Rollback changes made on App.config file, so that we may ask SS to merge back our changes

--- a/SS.Integration.Adapter.WindowsService/App.config
+++ b/SS.Integration.Adapter.WindowsService/App.config
@@ -2,9 +2,9 @@
 <configuration>
 
 	<appSettings>
-    <add key="user" value="" />
-    <add key="password" value="" />
-    <add key="url" value="http://apicui.sportingsolutions.com" />
+    <add key="user" value="{username}" />
+    <add key="password" value="{password}" />
+    <add key="url" value="{url}" />
     <add key="newFixtureCheckerFrequency" value="60000" />
     <add key="startingRetryDelay" value="100" />
     <add key="maxRetryDelay" value="7000" />
@@ -13,12 +13,11 @@
     <add key="echoDelay" value="3000" />
     <add key="fixtureCreationConcurrency" value="20" />
     <add key="suspendAllOnShutdown" value="true" />
-    <add key="heartBeatIntervalSeconds" value="30" />
     <add key="eventStateFilePath" value="eventState.json" />
     <add key="marketFiltersDirectory" value="FixturesStateFiles\MarketFilterState" />
-    <add key="cacheExpiryInMins" value="0" />
+    <add key="cacheExpiryInMins" value="15" />
     <add key="statsEnabled" value="false" />
-    <add key="deltaRuleEnabled" value="true" />
+    <add key="deltaRuleEnabled" value="false" />
     <add key="sports" value="" /><!-- i.e. "Baseball,Football"-->
     <add key="stopStreamingDelayedSports" value="" />
     <add key="stopStreamingDelayMinutes" value="0" />
@@ -26,11 +25,6 @@
     <add key="useSupervisor" value="true" />
     <add key="supervisorUrl" value="http://localhost:9000" />
     <add key="skipRulesOnError" value="false" />
-    <add key="gearmanServers" value="10.12.69.36" />
-    <add key="gearmanPort" value="4730" />
-    <add key="redisServer" value="10.12.71.35" />
-    <add key="redisPort" value="6379" />
-    <add key="ClientSettingsProvider.ServiceUri" value="" />
 	</appSettings>
 
 	<startup>
